--- a/apps/trolls_goals/public/tmpl/domain_tooltip.html
+++ b/apps/trolls_goals/public/tmpl/domain_tooltip.html
@@ -2,9 +2,9 @@
      ng-init="$root.backupDomain(item)">
   <div class="arrow"></div>
   <div class="popover-inner">
-    <div ng-enter="$root.saveDomain(item); closePopup();"
-         ng-ctrl-delete="$root.deleteDomain(item); closePopup();"
-         ng-escape="$root.revertDomain(item); closePopup();">
+    <div ng-enter="$root.saveDomain(item); closePopup($event);"
+         ng-ctrl-delete="$root.deleteDomain(item); closePopup($event);"
+         ng-escape="$root.revertDomain(item); closePopup($event);">
       <div class="input-group" title="Name of this domain">
         <span class="input-group-addon bold" focus-next-when-clicked>Name</span>
         <input type="text" class="form-control" ng-model="item.name" focus-on-load />
@@ -21,22 +21,22 @@
       </select>
     </div>
     <div class="crud_buttons">
-      <button class="btn btn-primary" ng-click="$root.saveDomain(item); closePopup();" title="{{mode}} (Enter)">
+      <button class="btn btn-primary" ng-click="$root.saveDomain(item); closePopup($event);" title="{{mode}} (Enter)">
         {{mode}}
         <span class="glyphicon glyphicon-ok"></span>
       </button>
       <button ng-if="mode === 'Update'" class="btn btn-danger"
-              ng-click="$root.deleteDomain(item); closePopup();" title="Delete (Ctrl + Delete)">
+              ng-click="$root.deleteDomain(item); closePopup($event);" title="Delete (Ctrl + Delete)">
         Delete
         <span class="glyphicon glyphicon-trash"></span>
       </button>
       <button ng-if="mode === 'Update'" class="btn btn-warning float-right"
-              ng-click="$root.revertDomain(item); closePopup();" title="Discard Changes (Esc)">
+              ng-click="$root.revertDomain(item); closePopup($event);" title="Discard Changes (Esc)">
         Discard
         <span class="glyphicon glyphicon-remove"></span>
       </button>
       <button ng-if="mode !== 'Update'" class="btn btn-warning float-right"
-              ng-click="$root.newDomain(); closePopup();" title="Cancel (Esc)">
+              ng-click="$root.newDomain(); closePopup($event);" title="Cancel (Esc)">
         Cancel
         <span class="glyphicon glyphicon-remove"></span>
       </button>
